rough cut at speakers on homepage

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -198,6 +198,182 @@
           </div>
       </div>
     </section>
+<section id="speakers" class="content speakers" style="background: #b3ad9f;">
+    	<div class="container">
+        	<div class="col-md-10 col-md-offset-1 text-center">
+                <h1>Speakers</h1>
+                <p></p>
+        	</div>
+          <div class="col-sm-6 col-md-2">
+            <div class="thumbnail">
+            <img src="/images/placeholder-hi.png" alt="...">
+            <div class="caption">
+                <h4>Speaker Name</h4>
+                <p>Short Bio</p>
+                <div>
+                  <a href="#"><i class="fa fa-twitter"></i></a>
+                  <a href="#"><i class="fa fa-github"></i></a>
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-2">
+            <div class="thumbnail">
+            <img src="/images/placeholder-hi.png" alt="...">
+            <div class="caption">
+                <h4>Speaker Name</h4>
+                <p>Short Bio</p>
+                <div>
+                  <a href="#"><i class="fa fa-twitter"></i></a>
+                  <a href="#"><i class="fa fa-github"></i></a>
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-2">
+            <div class="thumbnail">
+            <img src="/images/placeholder-hi.png" alt="...">
+            <div class="caption">
+                <h4>Speaker Name</h4>
+                <p>Short Bio</p>
+                <div>
+                  <a href="#"><i class="fa fa-twitter"></i></a>
+                  <a href="#"><i class="fa fa-github"></i></a>
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-2">
+            <div class="thumbnail">
+            <img src="/images/placeholder-hi.png" alt="...">
+            <div class="caption">
+                <h4>Speaker Name</h4>
+                <p>Short Bio</p>
+                <div>
+                  <a href="#"><i class="fa fa-twitter"></i></a>
+                  <a href="#"><i class="fa fa-github"></i></a>
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-2">
+            <div class="thumbnail">
+            <img src="/images/placeholder-hi.png" alt="...">
+            <div class="caption">
+                <h4>Speaker Name</h4>
+                <p>Short Bio</p>
+                <div>
+                  <a href="#"><i class="fa fa-twitter"></i></a>
+                  <a href="#"><i class="fa fa-github"></i></a>
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-2">
+            <div class="thumbnail">
+            <img src="/images/placeholder-hi.png" alt="...">
+            <div class="caption">
+                <h4>Speaker Name</h4>
+                <p>Short Bio</p>
+                <div>
+                  <a href="#"><i class="fa fa-twitter"></i></a>
+                  <a href="#"><i class="fa fa-github"></i></a>
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-2">
+            <div class="thumbnail">
+            <img src="/images/placeholder-hi.png" alt="...">
+            <div class="caption">
+                <h4>Speaker Name</h4>
+                <p>Short Bio</p>
+                <div>
+                  <a href="#"><i class="fa fa-twitter"></i></a>
+                  <a href="#"><i class="fa fa-github"></i></a>
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-2">
+            <div class="thumbnail">
+            <img src="/images/placeholder-hi.png" alt="...">
+            <div class="caption">
+                <h4>Speaker Name</h4>
+                <p>Short Bio</p>
+                <div>
+                  <a href="#"><i class="fa fa-twitter"></i></a>
+                  <a href="#"><i class="fa fa-github"></i></a>
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-2">
+            <div class="thumbnail">
+            <img src="/images/placeholder-hi.png" alt="...">
+            <div class="caption">
+                <h4>Speaker Name</h4>
+                <p>Short Bio</p>
+                <div>
+                  <a href="#"><i class="fa fa-twitter"></i></a>
+                  <a href="#"><i class="fa fa-github"></i></a>
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-2">
+            <div class="thumbnail">
+            <img src="/images/placeholder-hi.png" alt="...">
+            <div class="caption">
+                <h4>Speaker Name</h4>
+                <p>Short Bio</p>
+                <div>
+                  <a href="#"><i class="fa fa-twitter"></i></a>
+                  <a href="#"><i class="fa fa-github"></i></a>
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-2">
+            <div class="thumbnail">
+            <img src="/images/placeholder-hi.png" alt="...">
+            <div class="caption">
+                <h4>Speaker Name</h4>
+                <p>Short Bio</p>
+                <div>
+                  <a href="#"><i class="fa fa-twitter"></i></a>
+                  <a href="#"><i class="fa fa-github"></i></a>
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-2">
+            <div class="thumbnail">
+            <img src="/images/placeholder-hi.png" alt="...">
+            <div class="caption">
+                <h4>Speaker Name</h4>
+                <p>Short Bio</p>
+                <div>
+                  <a href="#"><i class="fa fa-twitter"></i></a>
+                  <a href="#"><i class="fa fa-github"></i></a>
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+      </div>
+    </section>
 
   {{ partial "sponsors.html" . }}
 
