get rid of excessive padding on speakers list

--- a/themes/gophercon/layouts/section/speakers.html
+++ b/themes/gophercon/layouts/section/speakers.html
@@ -3,7 +3,7 @@
 
 <main class="container generic">
     <section class="row"> 
-		<div class="generic col-md-8">
+		<div class="col-md-8">
 			<h2>2015 Speakers</h2>
 			{{ range .Data.Pages }}
 			<div class="row">
