Add row to homepage with room for a bigger/better description of the event

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -86,7 +86,7 @@
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
                 <h1>July 7th - 10th, 2015 in Denver, CO</h1>
-                  <p><b>GopherCon</b> is organized by GopherAcademy, LLC, a community-driven group of developers focused on the education of developers and the promotion of the Go programming language.</p>
+                <p><b>GopherCon</b> is the largest gathering of Go developers in the world. Join us as 1,500 gophers converge on Denver, CO for 3 full days of talks, events, &amp; hacking.</p>
               </div>
           </div>
       </div>
@@ -132,6 +132,19 @@
         </div>
       </div>
     </div>
+    
+  </section>
+
+  <section class="content gophercon-bio">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-10 col-md-offset-1 text-center">
+                <h1>GopherCon</h1>
+                <p><b>GopherCon</b> is organized by GopherAcademy, LLC, a community-driven group of developers focused on the education of developers and the promotion of the Go programming language.</p>
+                <p>It's the largest event in the world dedicated solely to the Go programming language. It's attended by the best and the brightest of the Go team and community. We're expecting a sold out attendance of 1,500 attendees this year.</p>
+              </div>
+          </div>
+      </div>
   </section>
   
   <section id="keynotes" class="content keynotes">
@@ -198,7 +211,7 @@
           </div>
       </div>
     </section>
-<section id="speakers" class="content speakers" style="background: #b3ad9f;">
+<section id="speakers" class="content speakers">
     	<div class="container">
         	<div class="col-md-10 col-md-offset-1 text-center">
                 <h1>Speakers</h1>
