First pass at schedule

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -388,6 +388,124 @@
       </div>
     </section>
 
+  <section class="content schedule">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-10 col-md-offset-1 text-center">
+                <h1>Schedule</h1>
+                <ul class="nav nav-tabs schedule-days">
+                  <li role="presentation" class="active"><a href="#workshop-schedule">July <span>7th</span></a></li>
+                  <li role="presentation" class="disabled"><a href="#">July <span>8th</span></a></li>
+                  <li role="presentation" class="disabled"><a href="#">July <span>9th</span></a></li>
+                  <li role="presentation" class="disabled"><a href="#">July <span>10th</span></a></li>
+                </ul>
+                <div class="tab-content">
+                  <div id="workshop-schedule" class="schedule-tab">
+                    <ul class="nav nav-tabs">
+                      <li role="presentation" class="active"><a href="#bootcamp-schedule">Bootcamp</a></li>
+                      <li role="presentation" class=""><a href="#workshop-tutorials-schedule">Tutorials</a></li>
+                    </ul>
+                  </div>
+                  <div id="bootcamp-schedule" class="schedule-tab schedule-item-tab">
+                    <h4>Go Bootcamp w/ William Kennedy</h4>
+                    <p>This is an all day bootcamp with William Kennedy from Ardan Labs. Tickets can be purchased separately.</p>
+                    <div class="row schedule-item">
+                      <div class="col-md-3 schedule-item-slot">
+                        <span class="time">9:00 - 10:00</span>
+                        <span class="location">Location: TBD</span>
+                      </div>
+                      <div class="col-md-9 schedule-item-details">
+                        <div class="schedule-item-summary">
+                          <span class="title">Keynote</span>
+                          <div class="speaker">
+                            <span class="smepeaker">Some Guy</span>
+                            <span class="designation">CTO, Some Company</span>
+                          </div>
+                        </div>
+                        <div class="abstract">
+                          Awesome keynote by awesome person...
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row schedule-item">
+                      <div class="col-md-3 schedule-item-slot">
+                        <span class="time">9:00 - 10:00</span>
+                        <span class="location">Location: TBD</span>
+                      </div>
+                      <div class="col-md-9 schedule-item-details">
+                        <div class="schedule-item-summary">
+                          <span class="title">Keynote</span>
+                          <div class="speaker">
+                            <span class="smepeaker">Some Guy</span>
+                            <span class="designation">CTO, Some Company</span>
+                          </div>
+                        </div>
+                        <div class="abstract">
+                          Awesome keynote by awesome person...
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row schedule-item">
+                      <div class="col-md-3 schedule-item-slot">
+                        <span class="time">9:00 - 10:00</span>
+                        <span class="location">Location: TBD</span>
+                      </div>
+                      <div class="col-md-9 schedule-item-details">
+                        <div class="schedule-item-summary">
+                          <span class="title">Keynote</span>
+                          <div class="speaker">
+                            <span class="smepeaker">Some Guy</span>
+                            <span class="designation">CTO, Some Company</span>
+                          </div>
+                        </div>
+                        <div class="abstract">
+                          Awesome keynote by awesome person...
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row schedule-item">
+                      <div class="col-md-3 schedule-item-slot">
+                        <span class="time">9:00 - 10:00</span>
+                        <span class="location">Location: TBD</span>
+                      </div>
+                      <div class="col-md-9 schedule-item-details">
+                        <div class="schedule-item-summary">
+                          <span class="title">Keynote</span>
+                          <div class="speaker">
+                            <span class="smepeaker">Some Guy</span>
+                            <span class="designation">CTO, Some Company</span>
+                          </div>
+                        </div>
+                        <div class="abstract">
+                          Awesome keynote by awesome person...
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row schedule-item">
+                      <div class="col-md-3 schedule-item-slot">
+                        <span class="time">9:00 - 10:00</span>
+                        <span class="location">Location: TBD</span>
+                      </div>
+                      <div class="col-md-9 schedule-item-details">
+                        <div class="schedule-item-summary">
+                          <span class="title">Keynote</span>
+                          <div class="speaker">
+                            <span class="smepeaker">Some Guy</span>
+                            <span class="designation">CTO, Some Company</span>
+                          </div>
+                        </div>
+                        <div class="abstract">
+                          Awesome keynote by awesome person...
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+          </div>
+      </div>
+  </section>
+
   {{ partial "sponsors.html" . }}
 
   <section id="hotels" class="content hotels">
