Start of incorporating custom gopher

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -139,11 +139,18 @@
     <div class="container">
         <div class="row">
             <div class="col-md-10 col-md-offset-1 text-center">
-                <h1>GopherCon</h1>
+                <h1>GopherCon 2015</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-3 text-center">
+              <img src="/images/cowboy-color.png" />
+            </div>
+            <div class="col-md-7 text-center">
                 <p><b>GopherCon</b> is organized by GopherAcademy, LLC, a community-driven group of developers focused on the education of developers and the promotion of the Go programming language.</p>
                 <p>It's the largest event in the world dedicated solely to the Go programming language. It's attended by the best and the brightest of the Go team and community. We're expecting a sold out attendance of 1,500 attendees this year.</p>
-              </div>
-          </div>
+            </div>
+        </div>
       </div>
   </section>
   
