--- a/themes/gophercon/layouts/partials/navbar.html
+++ b/themes/gophercon/layouts/partials/navbar.html
@@ -37,7 +37,7 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">SCHEDULE <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="/workshops">Workshops</a></li>
+            <li><a href="/#workshop-schedule">Workshops</a></li>
             <li><a href="/#keynotes">Keynotes</a></li>
             <li><a href="/speakers">Speakers</a></li>
           </ul>
