--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -401,114 +401,118 @@
             <div class="col-md-10 col-md-offset-1 text-center">
                 <h1>Schedule</h1>
                 <ul class="nav nav-tabs schedule-days">
-                  <li role="presentation" class="active"><a href="#workshop-schedule">July <span>7th</span></a></li>
-                  <li role="presentation" class="disabled"><a href="#">July <span>8th</span></a></li>
-                  <li role="presentation" class="disabled"><a href="#">July <span>9th</span></a></li>
-                  <li role="presentation" class="disabled"><a href="#">July <span>10th</span></a></li>
+                  <li role="presentation" class="active"><a data-toggle="tab" href="#workshop-schedule">July <span>7th</span></a></li>
+                  <li role="presentation" class="disabled"><a href="#day1-schedule">July <span>8th</span></a></li>
+                  <li role="presentation" class="disabled"><a href="#day2-schedule">July <span>9th</span></a></li>
+                  <li role="presentation" class="disabled"><a href="#hackday-schedule">July <span>10th</span></a></li>
                 </ul>
                 <div class="tab-content">
-                  <div id="workshop-schedule" class="schedule-tab">
+                  <div id="workshop-schedule" class="tab-pane schedule-tab active">
                     <ul class="nav nav-tabs">
-                      <li role="presentation" class="active"><a href="#bootcamp-schedule">Bootcamp</a></li>
-                      <li role="presentation" class=""><a href="#workshop-tutorials-schedule">Tutorials</a></li>
+                      <li role="presentation" class="active"><a data-toggle="tab" href="#bootcamp-schedule">Go Bootcamp</a></li>
+                      <li role="presentation" class=""><a data-toggle="tab" href="#workshop-tutorials-schedule">Workshop Track</a></li>
                     </ul>
+                    <div class="tab-content">
+                      <div id="bootcamp-schedule" class="schedule-tab schedule-item-tab tab-pane active">
+                        <h4>Go Bootcamp</h4>
+                        <p>The Go Bootcamp is an all day workshop to get you up and running with Go.</p>
+                        <p>Tickets are available for this workshop at an additional cost.</p>
+                        <div class="row schedule-item">
+                          <div class="col-md-3 schedule-item-slot">
+                            <span class="time">9:00am - 5:00pm</span>
+                            <span class="location">Location: TBD</span>
+                          </div>
+                          <div class="col-md-9 schedule-item-details">
+                            <div class="schedule-item-summary">
+                              <span class="title">Exploring Go's Utility Ecosystem</span>
+                              <div class="speaker">
+                                <span class="name">William Kennedy</span>
+                                <span class="designation">Ardan Labs</span>
+                              </div>
+                            </div>
+                            <div class="abstract">
+                              <p>The Go Bootcamp is a 1 day class providing a comprehensive and idiomatic overview of the Go programming language. We will cover topics ranging from language syntax, Go's approach to object-oriented semantics, concurrency, channels and more. This class is great for anyone wanting to get a jump start on learning Go or wanting to understand more about the language and internals!</p>
+                              <p><strong>Teacher:</strong> William Kennedy (<a href="https://twitter.com/goinggodotnet">@goinggodotnet</a>)
+                              <br />William Kennedy works in Miami, FL as a managing partner at Ardan Studios: a mobile, web and systems development company. He is also the co-author of the book Go In Action, the author of the blog <a href="http://www.goinggo.net/">GoingGo.Net</a> and the organizer for Miami's Go and MongoDB meetups.
+                              </p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div id="workshop-tutorials-schedule" class="schedule-tab schedule-item-tab tab-pane">
+                        <h4>Workshop Track</h4>
+                        <p>This track is a series of highly focused workshops to further your Go knowledge by using Go in practice. They are taught by a number of renowned community members.</p>
+                        <p>Tickets are available for this workshop at an additional cost.</p>
+                        <div class="row schedule-item">
+                          <div class="col-md-3 schedule-item-slot">
+                            <span class="time">9:00am - 10:45am</span>
+                            <span class="location">Location: TBD</span>
+                          </div>
+                          <div class="col-md-9 schedule-item-details">
+                            <div class="schedule-item-summary">
+                              <span class="title">Exploring Go's Utility Ecosystem</span>
+                              <div class="speaker">
+                                <span class="name">Kevin Gillette</span>
+                              </div>
+                            </div>
+                            <div class="abstract">
+                              <p>Discover the full breadth and depth of the Go development and analysis tools available today. We will explore the go tool, golint, oracle, profiling, and various other utilities that will bolster your efficiency and capabilities as a developer. If you know the language and libraries but haven't had time to peruse the toolchain, this is a great opportunity to learn about what you've been missing!</p>
+                              <p><strong>Teacher:</strong> Kevin Gillette (<a href="https://twitter.com/kevingillette">@kevingillette</a>)
+                              <br />Kevin is an experienced software engineer that has enthusiastically used Go since 2012 to develop efficient, high-reliability backend systems. With a focus on breadth of knowledge, Kevin has expertise in a variety of languages and platforms, a firm grounding in theory, as well as a keen interest in computing history.</p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="row schedule-item">
+                          <div class="col-md-3 schedule-item-slot">
+                            <span class="time">11:00am - 12:45pm</span>
+                            <span class="location">Location: TBD</span>
+                          </div>
+                          <div class="col-md-9 schedule-item-details">
+                            <div class="schedule-item-summary">
+                              <span class="title">Working with Data in Go</span>
+                              <div class="speaker">
+                                <span class="name">Cory LaNou</span>
+                                <span class="designation">InfluxDB</span>
+                              </div>
+                            </div>
+                            <div class="abstract">
+                              <p>Working with data is a core component of many applications, and Go has great support for working with many different types of databases. In this workshop, we will cover the use of MongoDB to store and retrieve data with the mgo driver. Following this, you will learn best practices for building packages and apps that work with and expose data from any database.</p>
+                              <p><strong>Teacher:</strong> Cory LaNou (<a href="https://twitter.com/corylanou">@corylanou</a>)
+                              <br />Cory LaNou is a full stack web developer and entrepreneur with over 17 years of experience. After 11 years of being a successful serial entrepreneur, he has joined the InfluxDB team, working on building an open source time series database written in Go. He is active in the Go community, leading the Denver Gophers meetup, as well as mentoring students in his free time.</p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="row schedule-item">
+                          <div class="col-md-3 schedule-item-slot">
+                            <span class="time">1:30pm - 3:15pm</span>
+                            <span class="location">Location: TBD</span>
+                          </div>
+                          <div class="col-md-9 schedule-item-details">
+                            <div class="schedule-item-summary">
+                              <span class="title">HTTP - Web Apps and APIs (Part 1)</span>
+                              <div class="speaker">
+                                <span class="name">Mark Bates, Jeremy Saenz</span>
+                              </div>
+                            </div>
+                            <div class="abstract">
+                              <p>The Go standard library provides a lot of great utility for building web applications and APIs, but it can sometimes it can be difficult to figure out how to build things the “right” way. In this two part workshop Jeremy and Mark will walk you through build web applications and APIs using the standard library and a few third party packages to make building applications fun and easy. Over the two parts Mark and Jeremy will build a web application with an Angular front-end that talks JSON to Go. Middleware, rendering, error handling, routing, testing, and more will covered.</p>
+                              <p><strong>Teacher:</strong> Mark Bates (<a href="https://twitter.com/markbates">@markbates</a>)
+                              <br />Mark Bates is the founder and chief architect of the Boston, MA based consulting company, Meta42 Labs. Mark spends his days focusing on new application development and consulting for his clients. At night he writes books, raises kids, and occasionally he forms a band and "tries to make it". Mark is the author of three books, "Distributed Programming with Ruby" (2009), "Programming in CoffeeScript" (2012), and "Conquering the Command Line" (2014). He also runs the weekly Golang screencast site, <a href="http://www.metacasts.tv">www.metacasts.tv</a>.</p>
+                              <p><strong>Teacher:</strong> Jeremy Saenz (<a href="https://twitter.com/codegangsta">@codegangsta</a>)
+                              <br />Jeremy, AKA Code Gangsta, is a fellow Gopher, author, speaker and screencaster. You have probably heard about one of his open source projects like Martini, Negroni, Gin, CLI and others. Jeremy is also the voice behind <a href="http://gophercasts.io">GopherCasts.io</a> and loves teaching people about technology through his programming screencasts.</p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
                   </div>
-                  <div id="bootcamp-schedule" class="schedule-tab schedule-item-tab">
-                    <h4>Go Bootcamp w/ William Kennedy</h4>
-                    <p>This is an all day bootcamp with William Kennedy from Ardan Labs. Tickets can be purchased separately.</p>
-                    <div class="row schedule-item">
-                      <div class="col-md-3 schedule-item-slot">
-                        <span class="time">9:00 - 10:00</span>
-                        <span class="location">Location: TBD</span>
-                      </div>
-                      <div class="col-md-9 schedule-item-details">
-                        <div class="schedule-item-summary">
-                          <span class="title">Keynote</span>
-                          <div class="speaker">
-                            <span class="smepeaker">Some Guy</span>
-                            <span class="designation">CTO, Some Company</span>
-                          </div>
-                        </div>
-                        <div class="abstract">
-                          Awesome keynote by awesome person...
-                        </div>
-                      </div>
-                    </div>
-                    <div class="row schedule-item">
-                      <div class="col-md-3 schedule-item-slot">
-                        <span class="time">9:00 - 10:00</span>
-                        <span class="location">Location: TBD</span>
-                      </div>
-                      <div class="col-md-9 schedule-item-details">
-                        <div class="schedule-item-summary">
-                          <span class="title">Keynote</span>
-                          <div class="speaker">
-                            <span class="smepeaker">Some Guy</span>
-                            <span class="designation">CTO, Some Company</span>
-                          </div>
-                        </div>
-                        <div class="abstract">
-                          Awesome keynote by awesome person...
-                        </div>
-                      </div>
-                    </div>
-                    <div class="row schedule-item">
-                      <div class="col-md-3 schedule-item-slot">
-                        <span class="time">9:00 - 10:00</span>
-                        <span class="location">Location: TBD</span>
-                      </div>
-                      <div class="col-md-9 schedule-item-details">
-                        <div class="schedule-item-summary">
-                          <span class="title">Keynote</span>
-                          <div class="speaker">
-                            <span class="smepeaker">Some Guy</span>
-                            <span class="designation">CTO, Some Company</span>
-                          </div>
-                        </div>
-                        <div class="abstract">
-                          Awesome keynote by awesome person...
-                        </div>
-                      </div>
-                    </div>
-                    <div class="row schedule-item">
-                      <div class="col-md-3 schedule-item-slot">
-                        <span class="time">9:00 - 10:00</span>
-                        <span class="location">Location: TBD</span>
-                      </div>
-                      <div class="col-md-9 schedule-item-details">
-                        <div class="schedule-item-summary">
-                          <span class="title">Keynote</span>
-                          <div class="speaker">
-                            <span class="smepeaker">Some Guy</span>
-                            <span class="designation">CTO, Some Company</span>
-                          </div>
-                        </div>
-                        <div class="abstract">
-                          Awesome keynote by awesome person...
-                        </div>
-                      </div>
-                    </div>
-                    <div class="row schedule-item">
-                      <div class="col-md-3 schedule-item-slot">
-                        <span class="time">9:00 - 10:00</span>
-                        <span class="location">Location: TBD</span>
-                      </div>
-                      <div class="col-md-9 schedule-item-details">
-                        <div class="schedule-item-summary">
-                          <span class="title">Keynote</span>
-                          <div class="speaker">
-                            <span class="smepeaker">Some Guy</span>
-                            <span class="designation">CTO, Some Company</span>
-                          </div>
-                        </div>
-                        <div class="abstract">
-                          Awesome keynote by awesome person...
-                        </div>
-                      </div>
-                    </div>
+                  </div>
+                  <div id="day1-schedule" class="tab-pane schedule-tab">
+                  </div>
+                  <div id="day2-schedule" class="tab-pane schedule-tab">
+                  </div>
+                  <div id="hackday-schedule" class="tab-pane schedule-tab">
                   </div>
                 </div>
-              </div>
           </div>
       </div>
   </section>
