--- a/themes/gophercon/static/css/main.css
+++ b/themes/gophercon/static/css/main.css
@@ -227,6 +227,7 @@ header .navbar-nav > li > a {
   font-weight: 600;
   padding-bottom: 10px;
   padding-top: 30px;
+  text-transform: uppercase;
 
   -moz-transition: all 0.5s ease-in;
   -webkit-transition: all 0.5s ease-in;
@@ -243,6 +244,14 @@ header .navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:
   color: #40657c;
   box-shadow: none;
   -webkit-box-shadow: none;
+}
+
+.dropdown-menu > li > a {
+  color: #40657c;
+  font-size: 14px;
+  font-weight: 400;
+  padding: 10px 20px;
+  text-transform: uppercase;
 }
 
 .dropdown-toggle span.caret {
