minor cleanup of header

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -30,7 +30,7 @@
                 <div class="tickets-section col-md-3">
                     <h3>Need tickets?</h3>
                     <p>Get your tickets early and guarantee your entrance to the largest <b>Go</b> conference in the world.</p>
-                    <a href="https://ti.to/gophercon/gophercon-2015" class="btn btn-orange" target="_blank">Purchase Tickets</a>
+                    <a href="https://ti.to/gophercon/gophercon-2015" class="btn btn-orange" target="_blank">Purchase Tickets <span  class="fa fa-arrow-circle-right"></span></a>
                 </div>
 
                 <div class="col-md-6">
@@ -97,7 +97,8 @@
         <div class="col-md-3">
           <div class="event-date">
             <div class="event-date-orange">
-              <h3>July <span>7th</span></h3>
+              
+              <h3><span class="fa fa-calendar-o"></span>July <span>7th</span></h3>
             </div>
             <h4><strong>Work Shop</strong> (Optional)</h4>
             <p>Optional workshop day.  Workshops to be announced soon.</p>
@@ -106,7 +107,7 @@
         <div class="col-md-3">
           <div class="event-date">
             <div class="event-date-blue">
-              <h3>July <span>8th</span></h3>
+              <h3><span class="fa fa-calendar-o"></span>July <span>8th</span></h3>
             </div>
             <h4><strong>Main Event</strong> (Day 1)</h4>
             <p>Featuring our first day of guest speakers talks and presentations.</p>
@@ -115,7 +116,7 @@
         <div class="col-md-3">
           <div class="event-date">
             <div class="event-date-blue">
-              <h3>July <span>9th</span></h3>
+              <h3><span class="fa fa-calendar-o"></span>July <span>9th</span></h3>
             </div>
             <h4><strong>Main Event</strong> (Day 2)</h4>
             <p>Our second and last day of guest speakers talks and presentations.</p>
@@ -124,7 +125,7 @@
         <div class="col-md-3">
           <div class="event-date">
             <div class="event-date-orange">
-              <h3>July <span>10th</span></h3>
+              <h3><span class="fa fa-calendar-o"></span>July <span>10th</span></h3>
             </div>
             <h4><strong>Hack Day</strong> (Optional)</h4>
             <p>Optional (but highly recommended) hack day.  Socialize and work with your Go friends.</p>
