fix speaker header

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -221,10 +221,11 @@
     </section>
 <section id="speakers" class="content speakers">
     	<div class="container">
-        	<div class="col-md-10 col-md-offset-1 text-center">
+        	<div class="text-center">
                 <h1>Speakers</h1>
                 <p></p>
         	</div>
+
           <div class="col-sm-6 col-md-2">
             <div class="thumbnail">
             <img src="/images/placeholder-hi.png" alt="...">
