cleanup some buttons, padding, icons

--- a/themes/gophercon/layouts/partials/footer.html
+++ b/themes/gophercon/layouts/partials/footer.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-md-12">
                 <p class="copyright">© 2015 GopherAcademy, LLC</p>
-                <p>The Gopher character is based on the Go mascot designed by
+                <p class="copyright-character">The Gopher character is based on the Go mascot designed by
                 <a href="http://reneefrench.blogspot.com/" target="blank">Renée French</a>
                 and copyrighted under the
                 <a href="http://creativecommons.org/licenses/by/3.0/us/" target="blank">Creative Commons Attribution 3.0 license.</a>
