--- a/themes/gophercon/layouts/_default/list.html
+++ b/themes/gophercon/layouts/_default/list.html
@@ -4,13 +4,16 @@
 <main class="container generic">
     <section class="row"> 
         <div class="col-md-8">
-
-            {{ range .Data.Pages }}
-			<h4>{{ dateFormat "Monday, Jan 2, 2006" .Date }}<h4>
-					<a href="{{ .RelPermalink}}">{{ .Title }} </a>
-			{{ end }}
-
-        </div><!-- generic col-md-10 -->
+          <h2>{{ .Title }}</h2>
+          {{ range .Data.Pages }}
+            <h3><a href="{{ .RelPermalink }}">{{ .Title }}</a></h3>
+            <small>{{ dateFormat "Monday, Jan 2, 2006" .Date }}</small><br/><br/>
+            {{ .Summary }}
+            {{ if .Truncated }} <br/><br/>
+            <a class="readmore" href="{{ .RelPermalink }}">Read More <i class="fa fa-arrow-circle-right"></i></a>
+            {{ end }}
+          {{ end }}
+        </div>
 
         {{ partial "sidebar.html" . }}
     </section>
