--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -593,38 +593,5 @@
   </section>
 </main>
 
-<footer>
-	<div class="container">
-    	<div class="row">
-        	<div class="col-md-12">
-            	<p class="copyright">© 2015 GopherAcademy, LLC</p>
-                <p>The Gopher character is based on the Go mascot designed by
-                <a href="http://reneefrench.blogspot.com/" target="blank">Renée French</a>
-                and copyrighted under the
-                <a href="http://creativecommons.org/licenses/by/3.0/us/" target="blank">Creative Commons Attribution 3.0 license.</a>
-				</p>
-            </div>
-        </div>
-    </div>
-</footer>
 
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-
-<script src="/bootstrap/js/bootstrap.min.js"></script>
-<script src="/js/main.js"></script>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-40886074-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
-
-</body>
-</html>
-
-
+{{ partial "footer.html" . }}
