--- a/themes/gophercon/layouts/section/news.html
+++ b/themes/gophercon/layouts/section/news.html
@@ -11,7 +11,7 @@
 				<small>{{ dateFormat "Monday, Jan 2, 2006" .Date }}</small><br/><br/>
 				{{ .Summary }}
 				{{ if .Truncated }} <br/><br/>
-    				<a class="btn btn-primary" href="{{ .RelPermalink }}">Read More…</a>
+        <a class="readmore" href="{{ .RelPermalink }}">Read More <i class="fa fa-arrow-circle-right"></i></a>
 				{{ end }}
 			{{ end }}
 
