--- a/themes/gophercon/static/css/main.css
+++ b/themes/gophercon/static/css/main.css
@@ -84,6 +84,17 @@ small {
   font-weight: 300;
 }
 
+.speaker-social {
+  margin-top: 5px;
+}
+
+.speaker-social a {
+  color: #ccc;
+  font-size: 24px;
+  font-weight: 300;
+  padding-right: 5px;
+}
+
 /*-------------------- Header Styles --------------------*/
 header {
 	background: url(../images/header-bg.jpg);
