--- a/themes/gophercon/static/css/main.css
+++ b/themes/gophercon/static/css/main.css
@@ -99,6 +99,7 @@ small {
 header {
 	background: url(../images/header-bg.jpg);
 	background-size: 150%;
+  background-position: center top; 
 }
 header .colors {
 	margin: 0;
